# wavegen-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  bors.toml
.github/: dependabot.yml
.github/workflows/: check-build.yml  publish.yml
benches/: my_benchmark.rs  waveform_benchmark.rs
examples/: plot.rs  spectrum.rs  wave.rs
src/: assert.rs  errors.rs  lib.rs  macros.rs  periodic_functions.rs  sampling_rate.rs  waveform.rs
src/periodic_functions/: bias.rs  mod.rs  sawtooth.rs  sine.rs  square.rs  test_utils.rs
